@@ -1,3 +1,6 @@
+2010/01/06
+        Fusion reaction extended for D-He3
+
 2005/12/06
 	The accuracy of the derivatives and the extrapolations are
           improved to include the Aitken-Neville method for inter- and
